fix(profile): position of edit button on firefox

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,20 +6,18 @@
     "profile__name   profile__edit-button"
     "profile__about  profile__about";
   grid-template-columns: auto 1fr;
-  gap: 16px 18px;
-  align-items: center;
-  /* правильным значением является baseline, но Firefox некорректно отображает контент при таком параметре
-  - прижимает к верху */
-  /* align-items: baseline; */
+  gap: 7px 18px;
+  align-items: baseline;
 }
 
 @media (max-width: 619px) {
   .profile__info {
-    margin-right: 0;
+    margin: -6px 0 1px;
+    /* ручная подгонка ((( под необъяснимое решение дизайнера сделать height меньше, чем line-height */
     grid-template-areas:
       "none            profile__name   profile__edit-button"
       "profile__about  profile__about  profile__about";
     grid-template-columns: 1fr auto 1fr;
-    gap: 14px 10px;
+    gap: 7px 10px;
   }
 }
